welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: not found: value leveBrosser
def coupstylo(c:Color) {setCouleurBrosse(c);baisseBrosse();leveBrosser()}
                                                           ^